--- a/index.html
+++ b/index.html
@@ -32,7 +32,14 @@
         </div>
       </form>
 
-      <button onclick="$('.chatbot-message').text('')" class="btn btn-primary">Wyczyść</button>
+      <button onclick="$('.chatbot-message').text('')" class="btn btn-primary mb-3">Wyczyść</button>
+
+      <h4>Co nowego w wersji <span class='courier'><strong>1.1</strong></span>?</h4>
+
+      <ul>
+        <li>Od teraz nie ma znacznia czy wpiszesz małą czy wielką literę</li>
+        <li>Nowe pytania które rozumie chatbot</li>
+      </ul>
     </div>
     <script src='intro.js'></script>
     <script src='questions.js'></script>
