--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html>
   <head>
     <title>ChatBot</title>
+    <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
@@ -15,7 +16,7 @@
       <div class="chatbot-message"></div>
       <form onsubmit="return chat()" name="chatForm">
         <div class="input-group mb-3 mt-4">
-          <input type="text" name="userMessage" id="userMessage" class="form-control" placeholder="Napisz coś do chatbota..." autofocus />
+          <input type="text" name="m" id="m" class="form-control" placeholder="Napisz coś do chatbota..." autofocus />
           <div class="input-group-append">
             <input type="submit" class="btn btn-primary" />
           </div>
@@ -41,6 +42,7 @@
         <li>Nowe pytania które rozumie chatbot</li>
       </ul>
     </div>
+    <script src='cookies.js'></script>
     <script src='intro.js'></script>
     <script src='questions.js'></script>
     <script src='chatbot.js'></script>
