added some emojis

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
       <div class="chatbot-message"></div>
       <form onsubmit="return chat()" name="chatForm">
         <div class="input-group mb-3 mt-4">
-          <input type="text" name="m" id="m" class="form-control" placeholder="Napisz coś do chatbota..." autofocus />
+          <input type="text" name="m" id="m" class="form-control" placeholder="Napisz coś do chatbota..." autofocus autocomplete="off" />
           <div class="input-group-append">
             <input type="submit" class="btn btn-primary" />
           </div>
